<resources>
    <string name="app_name">MathQA</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_enter_text">EnterTextActivity</string>
    <string name="title_activity_enter_formula">EnterFormulaActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_str">Settings</string>
    <string name="title_activity_image_preview">ImagePreview</string>

    <!-- App bar name -->
    <string name="camera_permission">Camera access is required</string>
    <string name="camera_rw_permission">Camera and read/write access to memory is needed to
    take pictures.</string>
    <string name="title_activity_image_capture">Capture an Image</string>
    <string name="title_activity_real_main">Explore Topics</string>
    <string name="title_activity_concept_detail">View a Concept</string>
    <string name="title_activity_question_detail">View a Question</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_select_subject">Select a Subject</string>
    <string name="no_network_connection_toast">No Network Connection.</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- List & Detail Views -->
    <string name="concept_header_subtitle">%1$d Questions available</string>
    <string name="subconcept_header_subtitle">%1$d Questions available</string>
    <string name="topic_header_subtitle">%1$d Concepts available</string>
    <string name="qd_concept_subconcept">Concept: %1$s - %2$s</string>
    <string name="qd_concept">Concept: %1$s</string>
    <string name="qd_source">Source: %1$s</string>
    <string name="qd_answer_title">Answer.</string>
    <string name="qd_difficulty_level">Difficulty Level:</string>
    <string name="qd_title_tv">Question Title</string>
    <string name="qd_concept_tv">Concept: </string>
    <string name="qd_source_tv">Source: </string>
    <string name="solution_title">Solution Title</string>

    <!-- Progress Activity -->
    <string name="no_items">No data available.</string>
    <string name="empty_topic_for_subject">No topic available for this subject.</string>
    <string name="empty_question_for_topic">No question available under this topic.</string>
    <string name="empty_question_for_concept">No question available under this concept.</string>
    <string name="no_internet">No Internet connection.</string>
    <string name="no_internet_desc">"Unable to connect with the server. Please try again once you
        have access to the internet."</string>
    <string name="error_try_again">Try Again.</string>
    <string name="empty_formula_for_concept">No formula available under this concept.</string>
    <string name="empty_keypoint_for_concept">No keypoint available under this concept.</string>
    <string name="empty_solution_for_question">No solution available for this question.</string>
    <string name="fab_text_search">Text search</string>
    <string name="fab_img_search">Document image search</string>
    <string name="formula_search">Formula search</string>
    <string name="qd_question_title">Question Title</string>
    <string name="question_content">Question content</string>
    <string name="error_latex_rendering">LaTeX string format is unsupported by the rendering
        engine. \n %1$s</string>
    <string name="sd_solution_title">Solution to Q.%s</string>
    <string name="low_storage_error">Error: Low storage, unable to perform OCR</string>
    <string name="camera_storage_access">Both camera and storage access are required for optical character recognition.</string>
    <string name="unable_to_crop">Unable to crop the image.</string>
    <string name="unable_capture_image">Unable to capture or read image from device. Please check if your application permissions are correct.</string>
    <string name="ocr_preprocessing">Processing...</string>
    <string name="sd_text_hint">Binomial expansion</string>
    <string name="sd_text_prefill"></string>
    <string name="sd_search_text_title">Search Text</string>
    <string name="sd_formula_search_title">Formula Search</string>
    <string name="sd_insert_formula">Insert Formula</string>
    <string name="search_action">Search</string>
    <string name="cancel_action">Cancel</string>
    <string name="sd_select_formula_category">Select Formula Category</string>
    <string name="sd_select_formula">Select Formula</string>
    <string name="fi_latex_preview">Latex preview:</string>
    <string name="str_latex_alt_preview">LaTeX Preview</string>
    <string name="fi_latex_input">Input:</string>
    <string name="fs_edit_latex_hint">Edit your latex text here</string>
    <string name="no_questions_result">No questions available for this query</string>
    <string name="search_result_title">Search Result</string>
    <string name="retrieved_formula">Retrieved Formula</string>
    <string name="formula_unavailable">Formula unavailable.</string>
    <string name="question_unavailable">Question unavailable.</string>
    <string name="formula_result_title">Retrieved Formula #%d</string>
    <string name="title_image_preview_activity">Preview an Image</string>
    <string name="latex_syntax_error">There is some errors with the LaTeX syntax</string>
    <string name="latex_preview_title">Latex Preview:</string>
    <string name="sr_latex_preview">Latex Preview:</string>
    <string name="sr_search_query">Search Query:</string>
    <string name="btn_ocr_edit_image">Re-crop / rotate image</string>
    <string name="btn_ocr_img_capture">Select / Capture a new Image</string>
    <string name="perform_ocr">Perform OCR</string>
</resources>
