<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/labels_text_size"
        android:textColor="@color/colorAccent"
        android:text="@string/fi_latex_preview"
        />

    <TextView
        android:id="@+id/fs_preview_placeholder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_dialog_actions_stacked_button_height"
        android:text="@string/str_latex_alt_preview"
        android:gravity="center"
        android:textColor="@color/material_button_text_color_disabled_light_theme"
        android:textSize="@dimen/md_content_textsize"
        />

    <io.github.kexanie.library.MathView
        android:id="@+id/fs_latex_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        auto:engine="KaTeX"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/fs_latex_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fs_edit_latex_hint"
        app:met_floatingLabelText="@string/fi_latex_input"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="normal"/>

    <RelativeLayout
        android:id="@+id/fs_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.afollestad.materialdialogs.internal.MDButton
            android:id="@+id/fs_reset_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            style="@style/MD_ActionButton.Text"
            />
        <com.afollestad.materialdialogs.internal.MDButton
            android:id="@+id/fs_insert_formula_btn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            style="@style/MD_ActionButton.Text"
            />
    </RelativeLayout>
</LinearLayout>