<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:auto="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="?attr/selectableItemBackground">
        <LinearLayout
            android:id="@+id/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginStart="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginEnd="@dimen/material_content_edge_margin_horizontal"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/formula_result_container"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/formula_result_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/formula_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:text="@string/retrieved_formula"/>
                    <io.github.kexanie.library.MathView
                        android:id="@+id/formula_latex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:clickable="false"
                        tools:text="Formula content"
                        auto:engine="KaTeX"/>
                    <TextView
                        android:id="@+id/formula_latex_alt"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:visibility="gone"
                        android:text="@string/question_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/formula_result_unavailable"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/formula_unavailable"
                        android:textAlignment="center"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/question_result_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/question_result_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/question_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:text="@string/qd_question_title"/>
                        <RatingBar
                            android:id="@+id/question_ratingbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:stepSize="0.5"
                            android:isIndicator="true"
                            style="?android:ratingBarStyleSmall"
                            />
                    </LinearLayout>
                    <io.github.kexanie.library.MathView
                        android:id="@+id/question_latex"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:scrollbars="none"
                        android:clickable="false"
                        tools:text="@string/question_content"
                        auto:engine="KaTeX"/>
                    <TextView
                        android:id="@+id/question_latex_alt"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:visibility="gone"
                        android:text="@string/question_content"
                        />
                    <TextView
                        android:id="@+id/question_concept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textStyle="italic"
                        android:textColor="@color/colorAccent"
                        tools:text="@string/qd_concept_tv"
                        android:layout_gravity="right"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/question_result_unavailable"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height"
                    android:gravity="center"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_unavailable"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>